[gd_scene load_steps=17 format=2]

[ext_resource path="res://Pergunta4.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Fundo.svg" type="Texture" id=2]
[ext_resource path="res://Imagens/Suco/bequer200ml.svg" type="Texture" id=3]
[ext_resource path="res://Imagens/Suco/bequer500ml.svg" type="Texture" id=4]
[ext_resource path="res://Imagens/Suco/bequer1litroFraco.svg" type="Texture" id=5]
[ext_resource path="res://Imagens/Suco/bequer1litro.svg" type="Texture" id=6]
[ext_resource path="res://Fontes/roboto/Roboto-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Imagens/certo.svg" type="Texture" id=8]
[ext_resource path="res://Imagens/errado.svg" type="Texture" id=9]
[ext_resource path="res://Imagens/Simbolo4.svg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 45
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )

[node name="Pergunta4" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="." index="0"]

position = Vector2( 526.447, 271.013 )
scale = Vector2( 1.37761, 0.618696 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BequerComFundo" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 116.829, 409.652 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 3 )

[node name="BequerComFundo2" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 360.829, 406.652 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 3 )

[node name="BequerComFundo3" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 566.829, 409.652 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 3 )

[node name="Bequer500ml" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 567.056, 409.652 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 4 )

[node name="Bequer1LClaro" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 361.158, 407.624 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 5 )

[node name="Bequer1Lescuro2" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 118.259, 409.573 )
scale = Vector2( 0.34019, 0.334224 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="." index="7"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 137.0
margin_right = 166.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Saturada"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label2" type="Label" parent="." index="8"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_top = 135.0
margin_right = 385.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Insaturada"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label3" type="Label" parent="." index="9"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 474.0
margin_top = 136.0
margin_right = 642.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Saturada com
corpo de fundo
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="10"]

modulate = Color( 0.0078125, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_top = 211.0
margin_right = 214.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Label3" type="Label" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 37.0
margin_right = 156.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "0,2L e 25g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label2" type="Label" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "1L e 25g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="CheckBox" type="CheckBox" parent="Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 11.0
margin_right = 26.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox2" type="CheckBox" parent="Panel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 41.0
margin_right = 26.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Panel2" type="Panel" parent="." index="11"]

modulate = Color( 0.0078125, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 263.0
margin_top = 211.0
margin_right = 434.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Label3" type="Label" parent="Panel2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 37.0
margin_right = 156.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "1L e 12,5g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label2" type="Label" parent="Panel2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "0,2L e 25g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="CheckBoxpnl2" type="CheckBox" parent="Panel2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 11.0
margin_right = 26.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox2pnl2" type="CheckBox" parent="Panel2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 41.0
margin_right = 26.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Panel3" type="Panel" parent="." index="12"]

modulate = Color( 0.0078125, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 473.0
margin_top = 211.0
margin_right = 644.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="Label3" type="Label" parent="Panel3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 37.0
margin_right = 156.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "0,5L e 12,5g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label2" type="Label" parent="Panel3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 5.0
margin_right = 147.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "0,2L e 25g"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="CheckBox1pnl3" type="CheckBox" parent="Panel3" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 11.0
margin_right = 26.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox2pnl3" type="CheckBox" parent="Panel3" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 41.0
margin_right = 26.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="BtSimular" type="Button" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 871.0
margin_top = 424.0
margin_right = 1007.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Simular"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="BtOk" type="Button" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 870.0
margin_top = 476.0
margin_right = 1006.0
margin_bottom = 523.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OK"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="BtContinuar" type="Button" parent="." index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 871.0
margin_top = 531.0
margin_right = 1007.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continuar"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="Certo" type="Sprite" parent="." index="16"]

visible = false
position = Vector2( 827.888, 268.582 )
scale = Vector2( 0.43905, 0.419995 )
texture = ExtResource( 8 )

[node name="Errado" type="Sprite" parent="." index="17"]

visible = false
position = Vector2( 801.888, 268.582 )
scale = Vector2( 0.43905, 0.419995 )
texture = ExtResource( 9 )

[node name="Simbolo" type="Sprite" parent="." index="18"]

position = Vector2( 1001.9, 167.504 )
scale = Vector2( 0.542135, 0.473156 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Simbolo" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -49.0
margin_top = -25.0
margin_right = -9.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[connection signal="pressed" from="Panel/CheckBox" to="." method="_on_CheckBox_pressed"]

[connection signal="pressed" from="Panel/CheckBox2" to="." method="_on_CheckBox2_pressed"]

[connection signal="pressed" from="Panel2/CheckBoxpnl2" to="." method="_on_CheckBoxpnl2_pressed"]

[connection signal="pressed" from="Panel2/CheckBox2pnl2" to="." method="_on_CheckBox2pnl2_pressed"]

[connection signal="pressed" from="Panel3/CheckBox1pnl3" to="." method="_on_CheckBox1pnl3_pressed"]

[connection signal="pressed" from="Panel3/CheckBox2pnl3" to="." method="_on_CheckBox2pnl3_pressed"]

[connection signal="pressed" from="BtSimular" to="." method="_on_BtSimular_pressed"]

[connection signal="pressed" from="BtOk" to="." method="_on_BtOk_pressed"]

[connection signal="pressed" from="BtContinuar" to="." method="_on_BtContinuar_pressed"]


